resolved background image issue

--- a/src/Components/Header/header.module.scss
+++ b/src/Components/Header/header.module.scss
@@ -21,6 +21,7 @@
         }
     }
     .down-pic {
-        padding-top: 36px;
+        padding-top: 56px;
+        padding-bottom: 233px;
     }
 }
