--- a/src/Components/Home/homepage.module.scss
+++ b/src/Components/Home/homepage.module.scss
@@ -9,9 +9,26 @@
     justify-content: center;
     align-items: center;
     .hero-section {
-        background-image: linear-gradient(to left, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../../assets/images/heroPic.svg');
+        position: relative;
+        background-image: linear-gradient(to left, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url('../../assets/images/heroPic.png');
         background-size: cover;
-        background-position: center;
         background-repeat: no-repeat;
+        height: 840px;
+        .text {
+            position: absolute;
+            top: 776px;
+            background-color: black;
+            color: whitesmoke;
+            border-radius: 10px;
+            height: 70px;
+            margin-left: 67px;
+            margin-right: 67px;
+            padding: 38px 59px 38px 58px;
+            .feature-container {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+        }
     }
 }
