--- a/src/Components/Home/homepage.module.scss
+++ b/src/Components/Home/homepage.module.scss
@@ -149,15 +149,38 @@
     .places {
         margin-left: 69px;
         margin-right: 71px;
-        width: calc(100% - 140px);
         display: grid;
         grid-template-columns: auto auto auto auto;
         gap: 20px;
         .place-detail {
             margin-top: 34px;
             display: block;
-            img {
+            .img {
                 width: 100%;
+            }
+            .next {
+                top: -55%;
+                z-index: 9;
+                float: right;
+                margin-right: -30px;
+            }
+            span {
+                font-weight: 400;
+                font-size: 20px;
+                line-height: 23px;
+                color: #000000;
+            }
+            .description {
+                display: flex;
+                align-items: center;
+                padding-top: 10px;
+                span {
+                    padding-left: 5px;
+                    font-weight: 400;
+                    font-size: 15px;
+                    line-height: 17px;
+                    color: rgba(18, 23, 30, 0.654531);
+                }
             }
             .room-name {
                 margin-top: 17px;
@@ -180,6 +203,91 @@
                     color: rgba(18, 23, 30, 0.654531);
                 }
             }
+            .price-icon {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                font-style: normal;
+                .per-night {
+                    padding-top: 10px;
+                    span {
+                        font-weight: 400;
+                        font-size: 15px;
+                        line-height: 17px;
+                        color: #000000;
+                    }
+                    em {
+                        color: rgba(18, 23, 30, 0.654531);
+                    }
+                }
+                .icons {
+                    padding-top: 10px;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    color: rgba(18, 23, 30, 0.654531);
+                    img {
+                        padding-left: 10px;
+                        padding-right: 10px;
+                    }
+                }
+            }
+            .next {
+                position: relative;
+            }
+        }
+    }
+    .availabilty {
+        margin: 0px 69px 100px 65px;
+        padding: 51px 67px 77px 67px;
+        background: #3E94FE;
+        box-shadow: 0px 30px 60px rgba(62, 148, 254, 0.2);
+        border-radius: 5px;
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+        color: #FFFFFF;
+        .item {
+            display: flex;
+            flex-direction: column;
+            width: 246px;
+            img {
+                width: 40px;
+                padding-bottom: 15px;
+            }
+            span {
+                padding-bottom: 15px;
+                font-weight: 400;
+                font-size: 30px;
+                line-height: 34px;
+            }
+            p {
+                font-weight: 400;
+                font-size: 17px;
+                line-height: 19px;
+            }
+        }
+    }
+    .powered-by {
+        text-align: center;
+        font-weight: 400;
+        font-size: 48px;
+        line-height: 55px;
+        color: #000000;
+    }
+    .partners {
+        display: flex;
+        margin: 17px 71px 130px 69px;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    footer {
+        background: rgba(62, 148, 254, 0.3);
+        padding: 71px 65px 55px 65px;
+        .footer-logo-section {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
     }
 }
