--- a/src/Components/Navbar/navbar.module.scss
+++ b/src/Components/Navbar/navbar.module.scss
@@ -1,31 +1,69 @@
 .navbar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    padding: 41px 70px 0px 70px;
-    .bangolo {
-        margin-right: auto;
-        margin-left: 24px;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 24px;
-        line-height: 27px;
+    .mobile-view {
+        display: none;
     }
-    div {
-        margin-left: 58px;
-        cursor: pointer;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 24px;
-        line-height: 27px;
+    .desktop-view {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        color: white;
+        padding: 41px 70px 0px 70px;
+        .bangolo {
+            margin-right: auto;
+            margin-left: 24px;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 27px;
+        }
+        div {
+            margin-left: 58px;
+            cursor: pointer;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 27px;
+        }
+        div:hover {
+            color: #3E94FE;
+            background: #FFFFFF;
+            border-radius: 10px;
+            text-align: center;
+            padding: 14px 24px;
+        }
     }
-    div:hover {
-        color: #3E94FE;
-        background: #FFFFFF;
-        border-radius: 10px;
-        text-align: center;
-        padding: 14px 24px;
+}
+
+@media screen and (max-width: 700px) {
+    .navbar {
+        .desktop-view {
+            display: none;
+        }
+        .mobile-view {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 58px 39px 42px 26px;
+            span {
+                margin-left: 24px;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 24px;
+                line-height: 27px;
+            }
+            button {
+                margin-left: auto;
+                outline: none;
+                font-weight: 400;
+                font-size: 18.3429px;
+                line-height: 21px;
+                color: #3E94FE;
+                background-color: #FFFFFF;
+                border-radius: 8px;
+                border: none;
+                padding: 15px 30px;
+            }
+        }
     }
 }
