--- a/src/Components/Home/homepage.module.scss
+++ b/src/Components/Home/homepage.module.scss
@@ -85,7 +85,7 @@
         }
     }
     .featured-cities {
-        margin-top: 187px;
+        margin-top: 400px;
         margin-left: 69px;
         font-style: normal;
         font-weight: 400;
@@ -126,117 +126,131 @@
                 display: none;
             }
         }
-        .detail {
-            display: block;
-            span {
-                font-weight: 400;
-                font-size: 20px;
-                line-height: 23px;
+        .second-grid-items {
+            grid-column: 1/-1;
+            .desktop-card-city {
+                display: grid;
+                grid-template-columns: auto auto auto;
+                column-gap: 20px;
+                row-gap: 42px;
+                .detail {
+                    display: block;
+                    span {
+                        font-weight: 400;
+                        font-size: 20px;
+                        line-height: 23px;
+                    }
+                    .city-name {
+                        font-weight: 400;
+                        font-size: 60px;
+                        line-height: 69px;
+                        text-align: center;
+                    }
+                }
             }
-            .city-name {
-                font-weight: 400;
-                font-size: 60px;
-                line-height: 69px;
-                text-align: center;
+            .mobile-card-city {
+                display: none;
             }
         }
     }
-    .featured-place {
-        padding-left: 69px;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 40px;
-        line-height: 46px;
-        color: #000000;
-    }
-    .places {
-        margin-left: 69px;
-        margin-right: 71px;
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-        gap: 20px;
-        .place-detail {
-            margin-top: 34px;
-            display: block;
-            .img {
-                width: 100%;
-            }
-            .next {
-                top: -55%;
-                z-index: 9;
-                float: right;
-                margin-right: -30px;
-            }
-            span {
-                font-weight: 400;
-                font-size: 20px;
-                line-height: 23px;
-                color: #000000;
-            }
-            .description {
-                display: flex;
-                align-items: center;
-                padding-top: 10px;
-                span {
-                    padding-left: 5px;
-                    font-weight: 400;
-                    font-size: 15px;
-                    line-height: 17px;
-                    color: rgba(18, 23, 30, 0.654531);
+    .wrapper {
+        .featured-place {
+            padding-left: 69px;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 40px;
+            line-height: 46px;
+            color: #000000;
+        }
+        .places {
+            margin-left: 69px;
+            margin-right: 71px;
+            display: grid;
+            grid-template-columns: auto auto auto auto;
+            gap: 20px;
+            .place-detail {
+                margin-top: 34px;
+                display: block;
+                .img {
+                    width: 100%;
                 }
-            }
-            .room-name {
-                margin-top: 17px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                font-style: normal;
-                .name {
-                    margin-right: auto;
+                .next {
+                    top: -55%;
+                    z-index: 9;
+                    float: right;
+                    margin-right: -30px;
+                }
+                span {
                     font-weight: 400;
                     font-size: 20px;
                     line-height: 23px;
                     color: #000000;
                 }
-                .room {
-                    margin-right: auto;
-                    font-weight: 400;
-                    font-size: 15px;
-                    line-height: 17px;
-                    color: rgba(18, 23, 30, 0.654531);
-                }
-            }
-            .price-icon {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                font-style: normal;
-                .per-night {
+                .description {
+                    display: flex;
+                    align-items: center;
                     padding-top: 10px;
                     span {
+                        padding-left: 5px;
                         font-weight: 400;
                         font-size: 15px;
                         line-height: 17px;
-                        color: #000000;
-                    }
-                    em {
                         color: rgba(18, 23, 30, 0.654531);
                     }
                 }
-                .icons {
-                    padding-top: 10px;
+                .room-name {
+                    margin-top: 17px;
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
-                    color: rgba(18, 23, 30, 0.654531);
-                    img {
-                        padding-left: 10px;
-                        padding-right: 10px;
+                    font-style: normal;
+                    .name {
+                        margin-right: auto;
+                        font-weight: 400;
+                        font-size: 20px;
+                        line-height: 23px;
+                        color: #000000;
+                    }
+                    .room {
+                        margin-right: auto;
+                        font-weight: 400;
+                        font-size: 15px;
+                        line-height: 17px;
+                        color: rgba(18, 23, 30, 0.654531);
                     }
                 }
-            }
-            .next {
-                position: relative;
+                .price-icon {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    font-style: normal;
+                    .per-night {
+                        padding-top: 10px;
+                        span {
+                            font-weight: 400;
+                            font-size: 15px;
+                            line-height: 17px;
+                            color: #000000;
+                        }
+                        em {
+                            color: rgba(18, 23, 30, 0.654531);
+                        }
+                    }
+                    .icons {
+                        padding-top: 10px;
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        color: rgba(18, 23, 30, 0.654531);
+                        img {
+                            padding-left: 10px;
+                            padding-right: 10px;
+                        }
+                    }
+                }
+                .next {
+                    position: relative;
+                }
             }
         }
     }
@@ -308,12 +322,18 @@
             }
             .featured-cities-images {
                 margin: 15px 24px 67px 23px;
+                row-gap: 7px;
                 .first-grid-items {
+                    grid-column: 1/-1;
                     .flex-items-desktop {
                         display: none;
                     }
                     .flex-items-mobile {
-                        grid-template-columns: 250px 250px;
+                        display: grid;
+                        grid-template-columns: auto auto;
+                        gap: 7px;
+                        color: #FFFFFF;
+                        font-style: normal;
                         .detail {
                             display: block;
                             span {
@@ -329,6 +349,43 @@
                             }
                         }
                     }
+                }
+                .second-grid-items {
+                    grid-column: 1/-1;
+                    .desktop-card-city {
+                        display: none;
+                    }
+                    .mobile-card-city {
+                        display: grid;
+                        grid-template-columns: auto auto auto;
+                        column-gap: 20px;
+                        row-gap: 42px;
+                        .detail {
+                            display: block;
+                            span {
+                                font-weight: 400;
+                                font-size: 20px;
+                                line-height: 23px;
+                            }
+                            .city-name {
+                                font-weight: 400;
+                                font-size: 23px;
+                                line-height: 26px;
+                                text-align: center;
+                            }
+                        }
+                    }
+                }
+            }
+            .wrapper {
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                .places {
+                    width: 100%;
+                    height: 100%;
+                    overflow-y: scroll;
+                    box-sizing: content-box;
                 }
             }
         }
