--- a/src/Components/Home/homepage.module.scss
+++ b/src/Components/Home/homepage.module.scss
@@ -153,15 +153,15 @@
             }
         }
     }
+    .featured-place {
+        padding-left: 69px;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 40px;
+        line-height: 46px;
+        color: #000000;
+    }
     .wrapper {
-        .featured-place {
-            padding-left: 69px;
-            font-style: normal;
-            font-weight: 400;
-            font-size: 40px;
-            line-height: 46px;
-            color: #000000;
-        }
         .places {
             margin-left: 69px;
             margin-right: 71px;
@@ -292,11 +292,13 @@
         line-height: 55px;
         color: #000000;
     }
-    .partners {
-        display: flex;
-        margin: 17px 71px 130px 69px;
-        justify-content: space-evenly;
-        align-items: center;
+    .wrap {
+        .partners {
+            display: flex;
+            margin: 17px 71px 130px 69px;
+            justify-content: space-evenly;
+            align-items: center;
+        }
     }
 }
 
@@ -378,14 +380,35 @@
                 }
             }
             .wrapper {
-                width: 100%;
-                height: 100%;
-                overflow: hidden;
+                overflow-x: scroll;
+                overflow-y: hidden;
+                white-space: nowrap;
                 .places {
-                    width: 100%;
-                    height: 100%;
-                    overflow-y: scroll;
-                    box-sizing: content-box;
+                    .place-detail {
+                        display: inline-block;
+                    }
+                }
+            }
+            .availabilty {
+                display: flex;
+                flex-direction: column;
+            }
+            .powered-by {
+                text-align: center;
+                font-weight: 400;
+                font-size: 40px;
+                line-height: 46px;
+                color: #000000;
+            }
+            .wrap {
+                overflow-x: scroll;
+                overflow-y: hidden;
+                white-space: nowrap;
+                .partners {
+                    display: flex;
+                    margin: 17px 71px 130px 69px;
+                    justify-content: space-evenly;
+                    align-items: center;
                 }
             }
         }
