--- a/src/Components/Home/homepage.module.scss
+++ b/src/Components/Home/homepage.module.scss
@@ -254,7 +254,7 @@
             }
         }
     }
-    .availabilty {
+    .availability {
         margin: 0px 69px 100px 65px;
         padding: 51px 67px 77px 67px;
         background: #3E94FE;
@@ -304,44 +304,59 @@
 
 @media screen and (max-width: 700px) {
     .homepage {
+        width: 100vw;
         .hero-section {
+            background-size: cover;
+            width: inherit;
+            height: 930px;
             .floating-container {
-                top: 600px;
-                width: 100%;
+                top: 850px;
+                width: calc(100% - 77px);
+                height: fit-content;
                 margin: 0 24px 96px 23px;
-                padding: 53px 0px 52px 81px;
+                padding: 53px 0px 52px 30px;
                 .feature-container {
                     display: flex;
                     flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
+                    justify-content: left;
+                    align-items: flex-start;
+                    .feature {
+                        padding-bottom: 50px;
+                        select {
+                            width: 250px;
+                        }
+                    }
+                    .search {
+                        display: none;
+                    }
                 }
             }
             .featured-cities {
                 font-size: 35px;
                 line-height: 40px;
                 margin-top: 750px;
+                margin-left: 23px;
             }
             .featured-cities-images {
-                margin: 15px 24px 67px 23px;
+                width: calc(100% - 46px);
+                overflow: hidden;
+                margin: 15px 23px 67px 23px;
                 row-gap: 7px;
                 .first-grid-items {
                     grid-column: 1/-1;
                     .flex-items-desktop {
-                        display: none;
-                    }
-                    .flex-items-mobile {
                         display: grid;
-                        grid-template-columns: auto auto;
+                        grid-template-columns: calc(50% - 23px) calc(50% - 30px);
                         gap: 7px;
                         color: #FFFFFF;
                         font-style: normal;
+                        width: 100vw;
                         .detail {
                             display: block;
                             span {
                                 font-weight: 400;
-                                font-size: 20px;
-                                line-height: 23px;
+                                font-size: 8px;
+                                line-height: 9px;
                             }
                             .city-name {
                                 font-weight: 400;
@@ -355,19 +370,15 @@
                 .second-grid-items {
                     grid-column: 1/-1;
                     .desktop-card-city {
-                        display: none;
-                    }
-                    .mobile-card-city {
                         display: grid;
-                        grid-template-columns: auto auto auto;
-                        column-gap: 20px;
-                        row-gap: 42px;
+                        grid-template-columns: calc(33.333% - 20px) calc(33.333% - 20px) calc(33.333% - 20px);
+                        column-gap: 7px;
                         .detail {
                             display: block;
                             span {
                                 font-weight: 400;
-                                font-size: 20px;
-                                line-height: 23px;
+                                font-size: 8px;
+                                line-height: 9px;
                             }
                             .city-name {
                                 font-weight: 400;
@@ -379,19 +390,66 @@
                     }
                 }
             }
+            .featured-place {
+                padding-left: 23px;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 35px;
+                line-height: 40px;
+                color: #000000;
+            }
+             ::-webkit-scrollbar {
+                display: none;
+            }
             .wrapper {
                 overflow-x: scroll;
                 overflow-y: hidden;
                 white-space: nowrap;
+                scrollbar-width: none;
+                -ms-overflow-style: none;
                 .places {
+                    margin-left: 23px;
+                    margin-bottom: 80px;
                     .place-detail {
                         display: inline-block;
+                        .img {
+                            width: 180px;
+                            height: 150px;
+                        }
+                        span {
+                            font-weight: 400;
+                            font-size: 11.8975px;
+                            line-height: 14px;
+                            color: #000000;
+                        }
+                        .next {
+                            display: none;
+                        }
                     }
                 }
             }
-            .availabilty {
+            .availability {
+                margin: 0px 0px 100px 0px;
+                padding: 51px 70px 77px 70px;
                 display: flex;
                 flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                .item {
+                    justify-content: center;
+                    align-items: center;
+                    width: inherit;
+                    span {
+                        text-align: center;
+                    }
+                    p {
+                        font-weight: 400;
+                        font-size: 17px;
+                        line-height: 19px;
+                        text-align: center;
+                        overflow-wrap: break-word;
+                    }
+                }
             }
             .powered-by {
                 text-align: center;
@@ -405,10 +463,16 @@
                 overflow-y: hidden;
                 white-space: nowrap;
                 .partners {
+                    margin: 78px 0px 130px 51px;
                     display: flex;
-                    margin: 17px 71px 130px 69px;
-                    justify-content: space-evenly;
-                    align-items: center;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                    img {
+                        display: block;
+                        margin: auto;
+                        padding-right: 63px;
+                    }
                 }
             }
         }
