--- a/src/Components/Navbar/navbar.module.scss
+++ b/src/Components/Navbar/navbar.module.scss
@@ -44,13 +44,16 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 58px 39px 42px 26px;
+            padding: 58px 30px 42px 26px;
+            .nav {
+                padding-right: 12px;
+            }
             span {
-                margin-left: 24px;
-                font-style: normal;
+                margin-left: 12px;
                 font-weight: 400;
-                font-size: 24px;
-                line-height: 27px;
+                font-size: 18px;
+                line-height: 21px;
+                color: #FFFFFF;
             }
             button {
                 margin-left: auto;
@@ -62,7 +65,7 @@
                 background-color: #FFFFFF;
                 border-radius: 8px;
                 border: none;
-                padding: 15px 30px;
+                padding: 12px 26px;
             }
         }
     }
