--- a/src/Components/Home/homepage.module.scss
+++ b/src/Components/Home/homepage.module.scss
@@ -1,6 +1,8 @@
+@import url("//db.onlinewebfonts.com/c/0abeb2471faeb5269db428b9eac2075e?family=GT+Walsheim+Pro+Regular");
 * {
     padding: 0px;
     margin: 0px;
+    font-family: 'GT Walsheim Pro Regular';
 }
 
 .homepage {
