--- a/src/Components/Navbar/navbar.module.scss
+++ b/src/Components/Navbar/navbar.module.scss
@@ -1,4 +1,6 @@
+@import url("//db.onlinewebfonts.com/c/0abeb2471faeb5269db428b9eac2075e?family=GT+Walsheim+Pro+Regular");
 .navbar {
+    font-family: 'GT Walsheim Pro Regular';
     .mobile-view {
         display: none;
     }
@@ -35,7 +37,7 @@
     }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768px) {
     .navbar {
         .desktop-view {
             display: none;
@@ -47,6 +49,11 @@
             padding: 58px 30px 42px 26px;
             .nav {
                 padding-right: 12px;
+                display: block;
+                outline: none;
+                border: none;
+                background: none;
+                cursor: pointer;
             }
             span {
                 margin-left: 12px;
@@ -55,7 +62,7 @@
                 line-height: 21px;
                 color: #FFFFFF;
             }
-            button {
+            .button {
                 margin-left: auto;
                 outline: none;
                 font-weight: 400;
@@ -66,6 +73,44 @@
                 border-radius: 8px;
                 border: none;
                 padding: 12px 26px;
+            }
+            .expanded {
+                display: none;
+            }
+            .navigation-menu {
+                position: absolute;
+                top: 0px;
+                left: 0px;
+                flex-direction: row;
+                width: calc(100% - 50px);
+                height: 100vh;
+                background-color: #FFFFFF;
+                display: flex;
+                padding-top: 30px;
+                div {
+                    padding-left: 40px;
+                    padding-right: 40px;
+                    cursor: pointer;
+                }
+                ul {
+                    padding-top: 40px;
+                }
+                li {
+                    text-align: center;
+                    list-style: none;
+                    text-decoration: none;
+                    cursor: pointer;
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 27px;
+                    color: #3E94FE;
+                    padding-bottom: 10px;
+                }
+                li:hover {
+                    color: #3E94FE;
+                    font-size: 24px;
+                }
             }
         }
     }
