added top margin to featured cities section

--- a/src/Components/Navbar/navbar.module.scss
+++ b/src/Components/Navbar/navbar.module.scss
@@ -106,6 +106,10 @@
                     line-height: 27px;
                     color: #3E94FE;
                     padding-bottom: 10px;
+                    a {
+                        text-decoration: none;
+                        color: #3E94FE;
+                    }
                 }
                 li:hover {
                     color: #3E94FE;
