--- a/src/Components/Navbar/navbar.module.scss
+++ b/src/Components/Navbar/navbar.module.scss
@@ -119,3 +119,31 @@
         }
     }
 }
+
+@media screen and (min-width: 800px) and (max-width: 1100px) {
+    .navbar {
+        .desktop-view {
+            display: flex;
+            padding: 58px 30px 42px 30px;
+            img {
+                width: 56px;
+                height: 56px;
+            }
+            .bangolo {
+                font-size: 22px;
+                line-height: 25px;
+            }
+            div {
+                font-size: 22px;
+                line-height: 25px;
+            }
+            div:hover {
+                color: #3E94FE;
+                background: #FFFFFF;
+                border-radius: 10px;
+                text-align: center;
+                padding: 14px 24px;
+            }
+        }
+    }
+}
