--- a/src/Components/Header/header.module.scss
+++ b/src/Components/Header/header.module.scss
@@ -46,3 +46,15 @@
         }
     }
 }
+
+@media screen and (min-width: 800px) and (max-width: 1100px) {
+    .header {
+        padding: 67px 30px 0px 30px;
+        .hero-texts {
+            .hero-text {
+                font-size: 75px;
+                line-height: 80px;
+            }
+        }
+    }
+}
