started implementing carousel slider

--- a/src/Components/Footer/footer.module.scss
+++ b/src/Components/Footer/footer.module.scss
@@ -315,10 +315,10 @@ footer {
                 }
                 .input-button {
                     .input-container {
-                        width: 420px;
+                        width: 75%;
                         padding: 20px 15px 20px 15px;
                         input {
-                            width: 350px;
+                            width: 320px;
                             font-size: 18px;
                         }
                     }
